--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -27,7 +27,7 @@ jobs:
         run: node updateFileList.js
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/gh-pages@v3.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
