--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,8 +28,12 @@ jobs:
         run: node updateFileList.js
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.9
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: gh-pages
-          folder: ./public
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git checkout --orphan gh-pages
+          git add public
+          git commit -m "Deploy to GitHub Pages"
+          git push origin gh-pages --force
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
