--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -11,11 +11,14 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 16
+
+      - name: Print Node.js version
+        run: node --version
 
       - name: Install dependencies
         run: npm install
@@ -23,9 +26,9 @@ jobs:
       - name: Scrape jobs
         run: node scraper.js
 
-      # Add this step to update fileList.json
       - name: Update fileList.json
         run: node updateFileList.js
+        working-directory: ./ # Set the working directory to the root of the repository
 
       - name: Deploy to GitHub Pages
         run: |
