--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -37,6 +37,6 @@ jobs:
           git checkout --orphan gh-pages
           git add data
           git commit -m "Deploy to GitHub Pages"
-          git push origin gh-pages --force
+          git push https://${GH_TOKEN}@github.com/cmurgu/mapping-jobs.git
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
