--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -32,3 +32,5 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: node deploy.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
