--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,41 +1,40 @@
-name: Scrape Jobs and Deploy
+name: Scrape and Update File List
 
 on:
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *' # Run the workflow every day at 00:00 UTC
 
 jobs:
-  scrape:
+  scrape_and_update:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v2
+    - name: Check out repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16
 
-      - name: Print Node.js version
-        run: node --version
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Install dependencies
-        run: npm install
+    - name: Run scraper.js script
+      run: node scraper.js
 
-      - name: Checkout gh-pages branch
-        run: |
-          git fetch origin gh-pages
-          git checkout -B gh-pages FETCH_HEAD
+    - name: Run updateFileList.js script
+      run: node updateFileList.js
 
-      - name: Scrape jobs
-        run: node scraper.js
+    - name: Commit and push changes
+      run: |
+        git config user.name "GitHub Actions Bot"
+        git config user.email "actions@github.com"
+        git add data/*
+        git commit -m "Update job data and file list"
+        git push
 
-      - name: Update fileList.json
-        run: node updateFileList.js
-        working-directory: ./
-
-      - name: Deploy to GitHub Pages
-        run: node deploy.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy to GitHub Pages
+      run: node deploy.js
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
