--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,6 +1,7 @@
 name: Scrape and Update File List
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *' # Run the workflow every day at 00:00 UTC
 
