--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.10",
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "micro": "^10.0.1",
     "openai": "^3.2.1",
     "stream": "^0.0.2"
